# voxyflow

./: .deploy-probe  .gitignore  .mcp.json  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  CORRECTION_PLAN.md  Caddyfile  DISPATCHER.md  FRONTEND_MIGRATION.md  FRONTEND_MIGRATION_PHASE5.md  INFRA.local.md.example  INFRA.md  LICENSE  PLAN_WORKER_PANEL_REDESIGN.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  SESSION_CONFLICT_ANALYSIS.md  TEST_PLAN.md  TODO.md  fix_wakeword.py  install.sh  mcp.json  package-lock.json  restart.sh  settings.json  settings.json.example  test_models.py  test_models2.py  test_models3.py
.claude/: mcp.json
backend/: .env.example  README.md  _import_probe.py  config.json  mcp_stdio.py  requirements.txt  setup_keys.py
cli/: README.md  pyproject.toml
cli/tests/: test_cli.py
cli/voxy/: __init__.py  app.py  chatws.py  client.py  config.py  output.py  repo.py
cli/voxy/commands/: cards.py  config_cmd.py  doctor.py  jobs.py  skills.py  update.py  workers.py  workspaces.py
docs/: AGENTS.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  CHAT_SCOPES.md  CLI.md  CODEX_CLI.md  CODE_REVIEW_2026-06-05.md  CODE_REVIEW_PLAN_2026-04-17.md  CONFIG.md  CONTEXT_GUIDE.md  DATA_MODEL.md  DEPLOYMENT.md  FEATURES.md  FRONTEND_ARCHITECTURE.md  MEMORY.md  NOMENCLATURE.md  NOTES.md  PERSONALITY.md  README.md  SETUP.md  SYSTEM.md  TOOLS.md  TOOL_ARCHITECTURE.md  UI_GUIDE.md  VOICE_FLOW.md
frontend-react/: .env.local.example  .gitignore  index.html  package-lock.json  package.json  playwright-mobile.config.ts  tsconfig.json  (+3 more)
(+662 files in other folders)
