[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxy-cli"
version = "0.1.0"
description = "Power CLI for Voxyflow — chat, kanban, workers, jobs and skills from the terminal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "websockets>=12",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
voxy = "voxy.app:main"

[tool.setuptools.packages.find]
include = ["voxy*"]
